feat: bidding menu support added